# bnl

./: .appveyor.yml  .clang-format  .clang-tidy  .editorconfig  .travis.yml  CMakeLists.txt  README.md  azure-pipelines.yml
bnl/base/: CMakeLists.txt
bnl/base/include/bnl/: buffer.hpp  buffer_view.hpp  buffers.hpp  error.hpp  log.hpp  nothing.hpp  result.hpp  string_view.hpp
bnl/base/include/bnl/base/: buffer.hpp  buffer_view.hpp  buffers.hpp  enum.hpp  error.hpp  function_view.hpp  log.hpp  macro.hpp  nothing.hpp  result.hpp  scope_exit.hpp  string.hpp  string_view.hpp  system_error.hpp  template.hpp
bnl/base/include/bnl/class/: macro.hpp
bnl/base/include/bnl/http3/: error.hpp  event.hpp  header.hpp  result.hpp  settings.hpp
bnl/base/include/bnl/ip/: address.hpp  endpoint.hpp  host.hpp  port.hpp
bnl/base/include/bnl/quic/: error.hpp  event.hpp  path.hpp  result.hpp
bnl/base/src/: buffer.cpp  error.cpp  log.cpp  string_view.cpp
bnl/base/src/base/: buffer.cpp  buffer_view.cpp  buffers.cpp  error.cpp  string_view.cpp  system_error.cpp
bnl/base/src/http3/: event.cpp  header.cpp  settings.cpp
bnl/base/src/ip/: address.cpp  endpoint.cpp  host.cpp
bnl/base/src/ip/address/: ipv4.cpp  ipv6.cpp
bnl/base/src/quic/: event.cpp  path.cpp
bnl/base/test/: buffer.cpp  buffers.cpp
bnl/core/: CMakeLists.txt  core-config.cmake.in
bnl/core/include/bnl/: buffer.hpp  buffer_view.hpp  buffers.hpp  buffers_view.hpp  error.hpp  function_ref.hpp  function_view.hpp  log.hpp  string.hpp  string_view.hpp
bnl/core/include/bnl/http3/: event.hpp  header.hpp  settings.hpp
bnl/core/include/bnl/quic/: data.hpp  event.hpp
bnl/core/src/: buffer.cpp  buffer_view.cpp  buffers.cpp  buffers_view.cpp  error.cpp  log.cpp
bnl/core/src/http3/: event.cpp  header.cpp
bnl/core/src/quic/: event.cpp
bnl/core/test/: buffer.cpp  buffers.cpp
bnl/http3/: CMakeLists.txt  http3-config.cmake.in
bnl/http3/app/: qpack-interop-decode.cpp  qpack-interop-encode.cpp
bnl/http3/app/endpoint/: client.cpp  client.hpp
bnl/http3/app/endpoint/os/: dns.cpp  dns.hpp  error.hpp  fd.cpp  fd.hpp  result.cpp  result.hpp
bnl/http3/app/qpack/: qpack-interop-decode.cpp  qpack-interop-encode.cpp
bnl/http3/include/bnl/http3/: client.hpp  error.hpp  event.hpp  frame.hpp  header.hpp  huffman.hpp  literal.hpp  prefix_int.hpp  qpack.hpp  quic.hpp  server.hpp  settings.hpp  transport.hpp  varint.hpp
bnl/http3/src/: client.cpp  error.cpp  event.cpp  header.cpp  literal.cpp  prefix_int.cpp  server.cpp
bnl/http3/src/client/: connection.cpp
bnl/http3/src/client/stream/: control.cpp  request.cpp
bnl/http3/src/codec/: body.cpp  headers.cpp  literal.cpp  prefix_int.cpp
bnl/http3/src/codec/frame/: decode.cpp  encode.cpp  frame.cpp
bnl/http3/src/codec/huffman/: decode.cpp  encode.cpp
bnl/http3/src/codec/qpack/: decode.cpp  decode_generated.cpp  encode.cpp  encode_generated.cpp
bnl/http3/src/codec/varint/: decode.cpp  encode.cpp
bnl/http3/src/endpoint/: client.cpp  handle.cpp  server.cpp
bnl/http3/src/endpoint/client/: control.cpp  request.cpp
bnl/http3/src/endpoint/server/: control.cpp  request.cpp
bnl/http3/src/endpoint/shared/: control.cpp  request.cpp
bnl/http3/src/endpoint/stream/: body.cpp  control.cpp  headers.cpp  request.cpp
bnl/http3/src/frame/: decode.cpp  encode.cpp  frame.cpp
bnl/http3/src/huffman/: decode.cpp  encode.cpp
bnl/http3/src/qpack/: decode.cpp  encode.cpp
bnl/http3/src/server/: connection.cpp
bnl/http3/src/server/stream/: control.cpp  request.cpp
bnl/http3/src/varint/: decode.cpp  encode.cpp
bnl/http3/test/: connection.cpp  endpoint.cpp  frame.cpp  handle.cpp  huffman.cpp  qpack.cpp  varint.cpp
bnl/http3/tools/: generate_huffman.py  generate_qpack.py
bnl/quic/: CMakeLists.txt  quic-config.cmake.in
bnl/quic/include/: data.hpp  transport.hpp
bnl/quic/include/bnl/quic/: client.hpp  clock.hpp  crypto.hpp  error.hpp  params.hpp  path.hpp
bnl/quic/include/endpoint/: client.hpp
bnl/quic/src/: client.cpp  crypto.cpp  error.cpp  path.cpp
bnl/quic/src/client/: connection.cpp  handshake.cpp  stream.cpp
bnl/quic/src/client/handshake/: boringssl.cpp
bnl/quic/src/client/ngtcp2/: connection.cpp  error.cpp
bnl/quic/src/crypto/: boringssl.cpp
bnl/quic/src/endpoint/: client.cpp
bnl/quic/src/endpoint/client/: handshake.cpp  handshake.hpp  impl.cpp  impl.hpp  stream.cpp  stream.hpp
ci/: linux.yml  (+2 more)
h3c/: CMakeLists.txt  h3c-config.cmake.in  h3c.pc.in
h3c/app/: qpack-decode.cpp  qpack-encode.cpp  qpack-interop-decode.cpp  qpack-interop-encode.cpp  util.hpp
h3c/include/h3c/: buffer.hpp  buffers.hpp  error.h  error.hpp  event.hpp  frame.h  frame.hpp  header.h  header.hpp  http.h  http.hpp  huffman.h  huffman.hpp  literal.hpp  log.h  log.hpp  prefix_int.hpp  qpack.h  qpack.hpp  quic.hpp  settings.h  settings.hpp  varint.h  varint.hpp
h3c/include/h3c/endpoint/: client.hpp  server.hpp
h3c/include/h3c/util/: class.hpp
h3c/src/: buffer.cpp  buffers.cpp  endianness.h  error.c  error.cpp  event.cpp  frame.c  frame.h  header.cpp  literal.cpp  prefix_int.cpp  settings.c  util.c  util.h  varint.c  varint.h
h3c/src/endpoint/: client.cpp  server.cpp
h3c/src/endpoint/stream/: body.cpp  control.cpp  headers.cpp  request.cpp
h3c/src/frame/: decode.c  decode.cpp  encode.c  encode.cpp  frame.cpp  parse.c  serialize.c
h3c/src/h3c/: endianness.h  frame.c  frame.h  varint.c
h3c/src/huffman/: decode.c  decode.cpp  decode_generated.c  decode_generated.cpp  encode.c  encode.cpp  encode_generated.c  encode_generated.cpp
h3c/src/qpack/: decode.c  decode.cpp  decode_generated.c  decode_generated.cpp  encode.c  encode.cpp  encode_generated.c  encode_generated.cpp
h3c/src/util/: decode.hpp  endpoint.hpp  enum.hpp  error.h  error.hpp  log.hpp  stream.hpp  string.c  string.cpp  string.h  string.hpp
h3c/src/varint/: decode.c  decode.cpp  encode.c  encode.cpp  parse.c  serialize.c
h3c/test/: buffer.cpp  buffers.cpp  endpoint.cpp  frame.cpp  handle.cpp  huffman.cpp  qpack.cpp  varint.cpp
h3c/tests/: varint.cpp
h3c/tools/: generate_huffman.py  generate_qpack.py
(+87 files in other folders)
